# industrial-rental-ops-agent

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: pyproject.toml  pyrightconfig.json
backend/data/: messages.csv  orders.csv  products.csv
backend/evals/: eval_agent.py
backend/src/ops_agent/: config.py  logger.py  main.py
backend/src/ops_agent/agent/: agent.py  schemas.py  tools.py
backend/src/ops_agent/api/: schemas.py
backend/src/ops_agent/models/: __init__.py  message.py  order.py  product.py
backend/src/ops_agent/repositories/: message_repo.py  order_repo.py  product_repo.py  protocols.py
backend/src/ops_agent/services/: data_service.py
backend/tests/: conftest.py  test_agent.py  test_tools.py
data/: users.csv
evals/: eval_tools.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  globals.css
frontend/src/components/chat/: chat-window.tsx  copy-button.tsx  message-input.tsx  message-list.tsx
frontend/src/components/chat/agent-response/: error-boundary.tsx  flagged-messages.tsx  format-transcript.ts  index.tsx  order-block.tsx  row.tsx  sentiment-block.tsx  summary-block.tsx
frontend/src/components/ui/: card.tsx
frontend/src/hooks/: use-chat.ts
frontend/src/types/: api.ts
src/ops_agent/: config.py  schemas.py
src/ops_agent/agent/: deps.py  schemas.py
src/ops_agent/api/: routes.py  schemas.py
src/ops_agent/models/: base.py  user.py
