[project]
name = "ops-agent"
version = "0.1.0"
description = "AI Operations Agent for Industrial Rentals"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.46",
    "pydantic>=2.12",
    "pydantic-ai>=1.6.0",
    "fastapi>=0.128",
    "uvicorn>=0.40",
    "anthropic>=0.76",
    "pydantic-settings>=2.12",
    "aiosqlite>=0.21",
    "sse-starlette>=3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "pyright>=1.1.407",
    "pytest>=8.4",
    "pytest-asyncio>=1.3",
    "pydantic-evals>=1.0.10",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ops_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
